# DataLake

./: .gitignore  .pre-commit-config.yaml  Enterprise_Data_Lake_Platform_Full_Specification.md  Implementation_Plan_Phase_Wise.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml
analytics_publisher/: __init__.py  analytics_publisher_handler.py
config/entity_resolution/ap_bill/: latest.json  match_rules_v1.json  survivorship_v1.json
config/entity_resolution/ar_invoice/: latest.json  match_rules_v1.json  survivorship_v1.json
config/entity_resolution/company/: latest.json  match_rules_v1.json  survivorship_v1.json
config/entity_resolution/contract/: latest.json  match_rules_v1.json  survivorship_v1.json
config/entity_resolution/person/: latest.json  match_rules_v1.json  survivorship_v1.json
config/entity_resolution/supplier/: latest.json  match_rules_v1.json  survivorship_v1.json
connector_runtime/: __init__.py  extraction_pipeline_handler.py  registry.py
connector_runtime/adapters/: __init__.py
connector_runtime/adapters/mysql_rds/: mysql_incremental_extractor.py  mysql_rds_connector.py  mysql_rds_raw_layer_writer.py  (+1 more)
connector_runtime/certification/: connector_certification_checklist.py
connector_runtime/configuration_repository/: configuration_repository.py
connector_runtime/interfaces/: __init__.py  connector_interface.py
connector_runtime/query_builders/: __init__.py  salesforce_soql_query_builder.py
connector_runtime/run_lifecycle/: run_lifecycle.py
connector_runtime/tests/: __init__.py  test_configuration_repository.py  test_connector_certification_checklist.py  test_connector_interface.py  test_extraction_pipeline_handler.py  test_run_lifecycle.py
contracts/: __init__.py  entity_configuration_contract.py  identifier_policy.py  observability_contract.py  pipeline_stage_contract.py
contracts/tests/: __init__.py  test_entity_configuration_contract.py  test_identifier_policy.py  test_observability_contract.py  test_pipeline_stage_contract.py
docs/: BEGINNER_GUIDE.html  BEGINNER_GUIDE.md  COST_ANALYSIS_AND_ROI.html  COST_ANALYSIS_AND_ROI.md  DEPLOYMENT_GUIDE.html  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.html  DEVELOPER_GUIDE.md  DOCUMENTATION_MAP.html  DOCUMENTATION_MAP.md  EXECUTIVE_OVERVIEW.html  EXECUTIVE_OVERVIEW.md  EXECUTIVE_SUMMARY_ONE_PAGE.html  EXECUTIVE_SUMMARY_ONE_PAGE.md  FAQ_FOR_MANAGEMENT.html  FAQ_FOR_MANAGEMENT.md  GLOSSARY_AND_TERMINOLOGY.html  GLOSSARY_AND_TERMINOLOGY.md  GO_LIVE_READINESS_CHECKLIST.html  GO_LIVE_READINESS_CHECKLIST.md  LEADERSHIP_BRIEF.html  LEADERSHIP_BRIEF.md  LOCAL_DEV_SETUP.html  LOCAL_DEV_SETUP.md  LOCAL_TESTING_GUIDE.html  LOCAL_TESTING_GUIDE.md  PIPELINE_FLOW.html  PIPELINE_FLOW.md  PLATFORM_FLOW.html  PLATFORM_FLOW.md  PLATFORM_STATUS.html  PLATFORM_STATUS.md  PRESENTATION_QUICK_REFERENCE.html  PRESENTATION_QUICK_REFERENCE.md  PRODUCTION_INCIDENT_RUNBOOK.html  PRODUCTION_INCIDENT_RUNBOOK.md  SAGE_ERP_IMPLEMENTATION_PLAN.md
entity_resolution/: entity_resolution_pipeline_handler.py  survivorship_policy.py
entity_resolution/canonical_record_publisher/: canonical_record_publisher.py
entity_resolution/golden_record_publisher/: golden_record_publisher.py
entity_resolution/matching_engine/: match_evaluation.py  match_rule_engine.py  record_blocker.py
entity_resolution/resolution_config/: resolution_config_registry.py
entity_resolution/tests/: test_canonical_record_publisher.py  test_match_evaluation.py  test_match_rule_engine.py  test_record_blocker.py  test_resolution_config_registry.py  test_survivorship_policy.py
governance/: data_catalog_registration.py  data_classification_policy.py  lineage_record.py  retention_policy_enforcer.py  source_onboarding_registry.py
governance/tests/: test_data_catalog_registration.py  test_data_classification_policy.py  test_lineage_record.py  test_retention_policy_enforcer.py  test_source_onboarding_registry.py
observability/: __init__.py  metrics_emitter.py  structured_logger.py
observability/tests/: __init__.py  test_metrics_emitter.py  test_structured_logger.py
orchestration/event_bridge/: extraction_schedule_client.py
orchestration/step_functions/: extraction_retry_policy.py  extraction_workflow.py  run_replay_controller.py
orchestration/tests/: test_extraction_retry_policy.py  test_extraction_schedule_client.py  test_extraction_workflow.py  test_run_replay_controller.py
schema_management/drift_evaluation/: drift_evaluator.py
schema_management/snapshot_repository/: snapshot_repository.py
schema_management/tests/: test_drift_evaluator.py  test_snapshot_repository.py
scripts/: run_mysql_connector_local.py  run_sage_connector_local.py  run_salesforce_connector_local.py  seed_entity_config.py  seed_entity_resolution_configs.py  seed_field_mappings.py  seed_schedules.py  setup_local_env.py  trigger_extraction.py
transformation/: analytics_layer_publisher.py  athena_query_client.py  curated_layer_writer.py  serving_store_loader.py  transformation_pipeline.py  transformation_pipeline_handler.py
transformation/field_mapping/: field_mapping_registry.py
transformation/quality_evaluation/: quality_policy_evaluator.py
transformation/tests/: test_analytics_layer_publisher.py  test_athena_query_client.py  test_curated_layer_writer.py  test_field_mapping_registry.py  test_quality_policy_evaluator.py  test_serving_store_loader.py  test_transformation_pipeline.py
watermark_management/tests/: test_watermark_repository.py
watermark_management/watermark_repository/: watermark_repository.py
(+122 files in other folders)
